k8s-manifests/react-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-nginx-service
  namespace: default
  labels:
    app: react-nginx
spec:
  selector:
    app: react-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
