k8s-manifests/react-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - host: react.local
    http:
      paths:
        # match /ui and everything under it
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: react-nginx-service
              port:
                number: 80

        # static assets
        - path: /assets
          pathType: Prefix
          backend:
            service:
              name: react-nginx-service
              port:
                number: 80

        # single files (use ImplementationSpecific instead of Exact)
        - path: /favicon.ico
          pathType: ImplementationSpecific
          backend:
            service:
              name: react-nginx-service
              port:
                number: 80
        - path: /robots.txt
          pathType: ImplementationSpecific
          backend:
            service:
              name: react-nginx-service
              port:
                number: 80
